fix(partial): button overflow in mobile, remove 100% width fill(#5)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1458,10 +1458,6 @@ img {
     padding-right: 1.4rem;
   }
 
-  .btn {
-    width: 100%;
-  }
-
   .home-hero__actions,
   .page-header__actions,
   .home-community__actions,
